# articles_rest

./: .dockerignore  .env  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 6b84c48d4aa2_fix_comment.py  c79652a7e11b_init.py  d76acc07cbdb_fix_env_py.py  efc41fe41d50_comments.py  fd8994b2f31e_comment_score_column.py
data/postgres/: postmaster.pid
data/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/postgres/base/16384/: 1247  1249  1259  16385  16388  16390  16396  16399  16405  16406  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
data/postgres/base/5/: pg_internal.init
data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
redis_data/: dump.rdb
src/: config.py  main.py
src/article/models/: model.py
src/article/repositories/: repository.py
src/article/routers/: router.py
src/article/schemas/: schema.py
src/article/services/: service.py
src/base/: model.py  repository.py  schema.py  service.py
src/comment/models/: model.py
src/comment/repositories/: repository.py
src/comment/routers/: router.py
src/comment/schemas/: schema.py
src/comment/services/: service.py
src/db/: database.py
src/dependencies/: services.py
src/exceptions/: exception.py
src/storage/: redis.py
